report/grammar.tex
\chapter{SPL Grammar}\label{ch:grammar}

% \setlength{\grammarparsep}{20pt plus 1pt minus 1pt} % increase separation between rules
\setlength{\grammarindent}{5em} % increase separation between LHS/RHS

\begin{grammar}

<SPL> ::= <Decl>+

<Decl> ::= <VarDecl>
		\alt <FunDecl>

<VarDecl> ::= (`var' | <Type>) <id> `=' <Exp> `;'

<FunDecl> ::= <id> `(' [ <FArgs> ] `)' [ `::' <FunType> ] `\{' <VarDecl>* <Stmt>+ `\}'

<RetType> ::= <Type>
		\alt `Void'

<FunType> ::= [ <FTypes> ] `\textrightarrow' <RetType>

<FTypes> ::= <Type> [ <FTypes> ]

<Type> ::= <BasicType>
		\alt `(' <Type> `,' <Type> `)'
		\alt `[' <Type> `]'
		\alt <id>

<BasicType> ::= `Int'
			\alt `Bool'
			\alt `Char'

% <FArgs> ::= [ <FArgs> `,' ] <id>
<FArgs> ::= <id> [ `,' <FArgs> ]

<Stmt> ::= `if' `(' <Exp> `)' `\{' <Stmt>* `}' [ `else' `\{' <Stmt>* `\}' ]
		\alt `while' `(' <Exp> `)' `\{' <Stmt>* `\}'
		\alt <id> <Field> `=' <Exp> `;'
		\alt <FunCall> `;'
		\alt `return' [ <Exp> ] `;'

<Exp> ::= <id> <Field>
	\todo[author=Aaron]{Op2 moet nog}
	\alt <Op1> <Exp>
	\alt <int>
	\alt <char>
	\alt `False' | `True'
	\alt `(' <Exp> `)'
	\alt <FunCall>
	\alt `[]'
	\alt `(' <Exp> `,' <Exp> `)'

<Field> ::= [ `.' (`hd' | `tl' | `fst' | `snd') <Field>]

<FunCall> ::= <id> `(' [ <ActArgs> ] `)'

<ActArgs> ::= <Exp> [ `,' <ActArgs> ]

<Op2> ::= `+' | `-' | `*' | `/' | `\%'
	\alt `==' | `\textless' | `\textgreater' | `\textless=' | `\textgreater=' | `!='
	\alt `\&\&' | `||'
	\alt `:'

<Op1> ::= `!' | `-'

<int> ::= [`-'] <digit>+

<id> ::= <alpha> ( `\_' | <alphaNum>)*

\end{grammar}
